[package]
name = "maze"
version = "0.1.0"
authors = ["Wei Li <llwwns@gmail.com>"]
edition = "2018"

[dependencies]

union-find = { path = "./union-find" }
rand = "0.6"
clap = "2.33"
rand_xoshiro = "0.1"
bitvec = "0.11"
byteorder = "1.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
overflow-checks = false
